--- a/Mon Portfolio Web/index.html
+++ b/Mon Portfolio Web/index.html
@@ -39,10 +39,10 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Prakash Shahi</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <div class="text-1">Bonjour, mon nom est</div>
+                <div class="text-2">Kreutzenberger Yvann</div>
+                <div class="text-3">Et je suis un <span class="typing"></span></div>
+                <a href="#">En savoir plus...</a>
             </div>
         </div>
     </section>
