--- a/Mon Portfolio Web/index.html
+++ b/Mon Portfolio Web/index.html
@@ -22,11 +22,11 @@
         <div class="max-width">
             <div class="logo"><a href="#">Mon Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#home" class="menu-btn">Accueil</a></li>
+                <li><a href="#about" class="menu-btn">A propos</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#skills" class="menu-btn">Compétences</a></li>
+                <li><a href="#teams" class="menu-btn">Équipe</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -50,15 +50,17 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">A propos de moi</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text">Je m'appelle Yvann Kreutzenberger, je suis aussi un <span class="typing-2"></span></div>
+                    <p>Actuellement, je suis un étudiant en troisième année de licence informatique à l'Université Grandmont dans la 
+                    ville de Tours. Passioné par le domaine informatique et les nouvelles technologies, j'ai créé ce portfolio pour 
+                    exposer mon parcours, mes projets et mes passions.
+                    <a href="https://drive.google.com/file/d/1rvJYSEY4LoEi8eWQ56lcncPpma7De971/view?usp=sharing">Télécharger mon CV</a>
                 </div>
             </div>
         </div>
@@ -67,13 +69,14 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">Mes services</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Ma principale passion et activité est la création de site web. De la création au design, donner forme à un site est amusant
+                        et plein de surprises. </p>
                     </div>
                 </div>
                 <div class="card">
@@ -149,27 +152,28 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">Mes amis et collaborateurs</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/collab1.jpg" alt="">
+                        <div class="text">Gurgoglione Lorenzo</div>
+                        <p>Meilleur ami et collaborateur. Son portfolio sur : lorenzog.fr
+                        </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/collab3.jpg" alt="">
+                        <div class="text">Ouzet Thomas</div>
+                        <p>Ami de lycée faisant des études en prépa.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/collab2.jpg" alt="">
+                        <div class="text">Sy Yahya</div>
+                        <p>Ami et camarade de fac en licence informatique.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -193,7 +197,7 @@
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title">Me contacter</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
@@ -203,21 +207,21 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="sub-title">Kreutzenberger Yvann</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Tours, France</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">yvann.kreutzenberger@gmail.fr</div>
                             </div>
                         </div>
                     </div>
@@ -250,7 +254,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="">KreutzenbergerYvann</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
