--- a/Mon Portfolio Web/index.html
+++ b/Mon Portfolio Web/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -101,10 +102,10 @@
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">Mes compétences</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
+                    <div class="text">Mes compétences et mon expérience.</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
                     <a href="#">Read more</a>
                 </div>
@@ -178,16 +179,16 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/collab4.jpg" alt="">
+                        <div class="text">Paolorsi Simon</div>
+                        <p>Ami et camarade de fac en licence informatique.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/collab5.png" alt="">
+                        <div class="text">Brocherie Nathan</div>
+                        <p>Ami et camarade de fac en licence informatique.</p>
                     </div>
                 </div>
             </div>
@@ -200,9 +201,12 @@
             <h2 class="title">Me contacter</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
-                    <div class="icons">
+                    <div class="text">Réseaux et informations</div>
+                    
+                    <a href="https://www.linkedin.com/in/yvann-kreutzenberger-8b5112223/" class="fa fa-linkedin"></a>
+                    <a href="https://www.instagram.com/yvann_marlokc/?hl=fr" class="fa fa-instagram"></a>
+                      
+                      <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
@@ -227,34 +231,36 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Envoyez un message</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Nom" required>
                             </div>
                             <div class="field email">
                                 <input type="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Sujet" required>
                         </div>
                         <div class="field textarea">
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Envoyer</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
+
     </section>
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="">KreutzenbergerYvann</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        Created By <a href="">KreutzenbergerYvann</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
